fix scroll bar destroying component alignement

--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,16 @@
 
 }
 
+html {
+  overflow-y: scroll;
+
+}
+
 body {
   display: flex;
+  flex-direction: row;
+  justify-items: start;
+  align-items: start;
   justify-content: center;
   background-color: var(--color-dark);
 }
@@ -57,9 +65,13 @@ h2 {
 /* APP */
 
 .app-container {
+  display: block;
+  margin: 0 auto;
+}
+
+.interface-container {
   margin-top: 5%;
-  min-height: 90vh;
-  height: 100%;
+  min-height: 100%;
   display: flex;
   flex-direction: row;
   gap: 24px;
